syntax = "proto3";
package grpc_plumber.v1;

import "google/protobuf/duration.proto";

service PlumberService {
  rpc GetHostname(GetHostnameRequest) returns (GetHostnameResponse);
  rpc SlowUnary(SlowUnaryRequest) returns (SlowUnaryResponse);
  rpc SlowServerStream(SlowServerStreamRequest) returns (stream SlowServerStreamResponse);
  rpc SlowClientStream(stream SlowClientStreamRequest) returns (SlowClientStreamResponse);
}

message GetHostnameRequest {}
message GetHostnameResponse {
  string hostname = 1;
}

message SlowUnaryRequest {
  google.protobuf.Duration sleep_time = 2;
}
message SlowUnaryResponse {}

message SlowServerStreamRequest {
  int32 message_count = 1;
  google.protobuf.Duration sleep_time = 2;
}
message SlowServerStreamResponse {
  int32 message_index = 1;
}

message SlowClientStreamRequest {
  int32 message_index = 1;
  google.protobuf.Duration sleep_time = 2;
}
message SlowClientStreamResponse {
  int32 message_count = 1;
}
